--- a/app/assets/stylesheets/readings.scss
+++ b/app/assets/stylesheets/readings.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the readings controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table th {
+  padding-right: 3em;
+}
+
+.btn {
+  margin-top: 10px;
+  margin-bottom: 10px !important;
+}
