--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,15 @@
-<h1>Welcome to Sweety!</h1>
-<p>This is your personal blood glucose level app!</p>
-<a>Enter new blood glucose reading</a>
-<p>Find me in app/views/home/index.html.erb</p>
+<% content_for :content do %>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Welcome to Sweety!</h1>
+      <h4>This is your personal blood glucose level app!</h4>
+      <% if user_signed_in? %>
+        <%= link_to 'Enter new blood glucose reading', new_reading_path, class: 'btn btn-success' %>
+        <p><%= link_to 'View History', readings_path, class: 'btn btn-primary'  %></p>
+      <% else %>
+        <p>Please register to begin:</p>
+        <p><%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %></p>
+      <% end %>
+    </div>
+  </div>
+<% end %>
