--- a/app/views/readings/show.html.erb
+++ b/app/views/readings/show.html.erb
@@ -1,4 +1,9 @@
-<p>
-  <strong>Reading:</strong>
-  <%= @reading.glucose_level %>
-</p>
+<h4>
+  <strong>Blood Glucose Level Reading:</strong>
+  <%= @reading.glucose_level %> (mg/dL)
+</h4>
+<h4>Date recorded:
+  <%= @reading.created_at.strftime("%A, %B %d, %Y") %>
+</h4>
+<br/>
+<p><%= link_to 'View History', readings_path, class: 'btn btn-primary'  %></p>
