--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,7 +12,7 @@
    
   <% @reports.each do |report| %>
     <tr>
-      <td><%= report.start_date %></td>
+      <td><%= report.start_date.strftime("%A, %B %d, %Y") %></td>
       <td><%= report.end_date.strftime("%A, %B %d, %Y") %></td>
       <td><%= link_to "View Report", report %></td>
     </tr>
