Moved report view complexity to the helper

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,7 +1,9 @@
 <h4><strong>Blood Glucose Level Report</strong></h4>
+<br />
+<p>Average: <%=  %></p>
+<p>Maximum: <%=  %></p>
+<p>Minimum: <%=  %></p>
 
-  <% if @report.start_date === @report.end_date %>
-    <%= render 'date_report' %>
-  <% else %>
-    <%= render 'range_report' %>
-  <% end %>
+<%= details(@report) %>
+
+<p><%= link_to "Back", :back, class: 'btn btn-default'  %></p>
