improved report and readings views

--- a/app/views/reports/_date_report.html.erb
+++ b/app/views/reports/_date_report.html.erb
@@ -1,1 +1,1 @@
-<h4>Date: <%= @report.start_date.strftime("%A, %B %d, %Y") %> </h4>
+<p>Date: <%= @report.start_date.strftime("%A, %B %d, %Y") %> </p>
