--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,16 +20,8 @@
         </ul>
         <ul class="nav navbar-nav pull-right">
           <% if user_signed_in? %>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                  <%= current_user.name %>
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><%= link_to 'Profile', edit_user_registration_path %></li>
-                  <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
-                </ul>
-              </li>
+              <li><%= link_to "#{current_user.name}", edit_user_registration_path %></li>
+              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
           <% else %>
               <li><%= link_to 'Log In', new_user_session_path %></li>
               <li><%= link_to 'Sign Up', new_user_registration_path %></li>
@@ -48,7 +40,6 @@
   </div>
 
   <div class="container">
-    <h1><%= yield :header %></h1>
     <%= yield %>
   </div>
 
