--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -23,3 +23,5 @@
     <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary' %><br />
   <% end -%>
 <% end -%>
+
+<%= link_to "Back", new_session_path(resource_name), class: 'btn btn-default' %><br />
