--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    <h1>Welcome to Sweety!</h1>
+    <h2>Welcome to Sweety!</h2>
     <h4>This is your personal blood glucose level app!</h4>
     <% if user_signed_in? %>
       <%= link_to 'Enter new blood glucose reading', new_reading_path, class: 'btn btn-success' %>
@@ -8,6 +8,7 @@
     <% else %>
       <p>Please register to begin:</p>
       <p><%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %></p>
+      <p><%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary btn-lg'  %></p>
     <% end %>
   </div>
 </div>
