Updated views, improved readability

--- a/app/views/readings/index.html.erb
+++ b/app/views/readings/index.html.erb
@@ -1,8 +1,6 @@
 <h1>Blood Glucose Level History</h1>
 
-<div class="btn btn-default">
-  <%= link_to 'Enter new blood glucose reading', new_reading_path %>
-</div>
+<%= link_to 'Enter new blood glucose reading', new_reading_path, class: 'btn btn-success' %>
 
 <table>
   <tr>
