--- a/app/views/readings/show.html.erb
+++ b/app/views/readings/show.html.erb
@@ -6,4 +6,7 @@
   <%= @reading.created_at.strftime("%A, %B %d, %Y") %>
 </h4>
 <br/>
-<p><%= link_to 'View History', readings_path, class: 'btn btn-primary'  %></p>
+<p>
+  <%= link_to 'Enter new blood glucose reading', new_reading_path, class: 'btn btn-success' %>
+  <%= link_to 'View History', readings_path, class: 'btn btn-primary'  %>
+</p>
