--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -2,7 +2,7 @@
 
   <div class="form-group">
     <%= f.label :start_date %><br>
-    <%= f.date_select :start_date, class: 'form-control', :order => [:day, :month, :year] %>
+    <%= f.date_select :start_date, class: 'form-control', :order => [:day, :month, :year], selected: Date.today.beginning_of_month %>
   </div>
 
   <div class="form-group">
@@ -11,7 +11,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Save", class: 'btn btn-success' %>
+    <%= f.submit "Go!", class: 'btn btn-success' %>
     <%= link_to "Cancel", :back, class: 'btn btn-default'  %>
   </div>
 
