--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <% else %>
       <p>Please register to begin:</p>
       <p><%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %></p>
-      <p><%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary btn-lg'  %></p>
+      <p><%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary btn-lg', id: 'login' %></p>
     <% end %>
   </div>
 </div>
