--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
               <li><%= link_to "#{current_user.name}", edit_user_registration_path %></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
           <% else %>
-              <li><%= link_to 'Log In', new_user_session_path %></li>
+              <li><%= link_to 'Log In', new_user_session_path, id: 'nav-login' %></li>
               <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <% end %>
         </ul>
