--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,8 +1,10 @@
+<h4>New Glucose Report</h4>
+
 <%= form_for :report, url: reports_path do |f| %>
 
   <div class="form-group">
     <%= f.label :start_date %><br>
-    <%= f.date_select :start_date, class: 'form-control', :order => [:day, :month, :year], selected: Date.today.beginning_of_month %>
+    <%= f.date_select :start_date, class: 'form-control', :order => [:day, :month, :year], selected: 1.month.ago %>
   </div>
 
   <div class="form-group">
