--- a/app/views/reports/_date_report.html.erb
+++ b/app/views/reports/_date_report.html.erb
@@ -1,1 +1,4 @@
-<p>Date: <%= @report.start_date.strftime("%A, %B %d, %Y") %> </p>
+<h2>Blood Glucose Level Report
+  <small><%= @report.start_date.strftime("%A, %B %d, %Y") %></small>
+</h2>
+<br />
